<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8E7FE"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="199dp"
            android:layout_height="181dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="PROFILE"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            app:layout_constraintEnd_toEndOf="@id/reg"
            app:layout_constraintStart_toStartOf="@id/reg"
            app:layout_constraintTop_toBottomOf="@id/reg"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:startIconDrawable="@drawable/person"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            app:layout_constraintEnd_toEndOf="@id/first_name_layout"
            app:layout_constraintStart_toStartOf="@id/first_name_layout"
            app:layout_constraintTop_toBottomOf="@id/first_name_layout"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/person"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Number"
            app:layout_constraintEnd_toEndOf="@id/last_name_layout"
            app:layout_constraintStart_toStartOf="@id/last_name_layout"
            app:layout_constraintTop_toBottomOf="@id/last_name_layout"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginStart="15dp"
            app:startIconDrawable="@drawable/phone_call"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/age_layout"
            app:layout_constraintEnd_toEndOf="@id/age_layout"
            app:layout_constraintTop_toBottomOf="@id/age_layout"
            android:layout_marginTop="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>